--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-02-05  Christian Cornelssen  <ccorn@cs.tu-berlin.de>
+
+	* libtool.m4 (_LT_AC_LANG_CXX_CONFIG)
+	(AC_LIBTOOL_PROG_LD_SHLIBS): Rewrite printf commands so
+	that the format string cannot be mistaken as an option.
+	Reported by Martin MOKREJS.
+
 2003-02-05  Robert Boehne  <rboehne@gnu.org>
 
 	* libtool.m4: Modify the sys_lib_search_path_spec to allow
