--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -1285,9 +1285,10 @@ the run-time path of the program.
 @item -shrext @var{suffix}
 If @var{output-file} is a libtool library, replace the system's standard
 file name extension for shared libraries with @var{suffix} (most systems
-use @file{so} here).  This option is helpful in certain cases where an
+use @file{.so} here).  This option is helpful in certain cases where an
 application requires that shared libraries (typically modules) have an
-extension other than the default one.
+extension other than the default one.  Please note you must supply the
+full file name extension including any leading dot.
 
 @item -R @var{libdir}
 If @var{output-file} is a program, add @var{libdir} to its run-time
