--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-24  Ralph Schleicher  <rs@nunatak.allgaeu.org>
+
+	* libtool.m4 (AC_LIBTOOL_SETUP): Check for ar.
+
 2003-02-23  Peter O'Gorman  <peter@pogma.com>
 
 	* libtool.m4 (darwin): Revamp darwin platform support.
