--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-02-24  Robert Boehne  <rboehne@gnu.org>
+
+	* libltdl/configure.ac: Use AC_CONFIG_AUX_DIR([.]) to place
+	auxilary files in the libltdl directory.
+	* Makefile.am: Add to the ltmain.sh rule to copy it into the
+	libltdl subdirectory.
+	* bootstrap: Explicitly handle ltmain.sh in libltdl, and pass
+	--copy to automake.
+
 2003-02-24  Ralph Schleicher  <rs@nunatak.allgaeu.org>
 
 	* libtool.m4 (AC_LIBTOOL_SETUP): Check for ar.
