--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-02-27  Benjamin Reed <ranger@befunk.com>
+
+	* THANKS: Added people who have submitted 3 or more patches
+	to libtool to the THANKS file.
+	* README: Added notes about the Darwin (MacOSX) support.
+
 2003-02-25  Bob McElrath  <bob+libtool@mcelrath.org>
 
 	* libtool.m4 (AC_LIBTOOL_PROG_COMPILER_PIC): Add support for
