--- a/README
+++ b/README
@@ -20,6 +20,7 @@ Shared library support has been implemented for these platforms:
   AIX 3.x, 4.x (*-*-aix3*, *-*-aix4*)
   BeOS (*-*-beos*)
   BSD/OS 2.1, 3.x, 4.x (*-*-bsdi2.1, *-*-bsdi3*, *-*-bsdi4*)
+  Darwin 5.x, 6.x a.k.a Mac OS X (*-*-darwin*) [see note]
   Digital/UNIX 3.x, 4.x, a.k.a. OSF/1 (*-*-osf3*, *-*-osf4*)
   DG/UX R4.11, R4.12, R4.20 (*-*-dguxR411*, *-*-dguxR412*, *-*-dguxR420*)
   FreeBSD 2.x, 3.x, 4.x (*-*-freebsd2*, *-*-freebsd3*, *-*-freebsd4*)
@@ -64,6 +65,9 @@ ftp://ftp.mch.sni.de/sni/mr/pd/gnu/gcc/gcc.2.7.2.3 on Reliant Unix.
 NOTE: libtool.m4, ltdl.m4 and the configure.ac files are marked to use
 autoconf-mode, which is distributed with GNU Emacs 21, and all recent
 releases of XEmacs.
+
+NOTE: In some cases support is more limited on Darwin 5.x because of
+the use of zsh as the default system shell.
 
 Libtool's home page is:
 
