--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-03-02  Alexandre Oliva  <aoliva@redhat.com>
+
+	* libtool.m4 (AC_PROG_LD): Use $CC instead of GCC.
+	(_LT_AC_LANG_CXX_CONFIG): Preserve variables used by AC_PROG_LD,
+	and reset them for a C++ environment.  Use the with_gnu_ld setting
+	from AC_PROG_LD.
+
 2003-02-28  Ralph Schleicher  <rs@nunatak.allgaeu.org>
 
 	* ltmain.in: Only append a dot to the wrapper script when
@@ -53,6 +60,11 @@
 
 2003-02-19  Alexandre Oliva  <aoliva@redhat.com>
 
+	* libtool.m4 (AC_PROG_LD): Use $CC instead of GCC.
+	(_LT_AC_LANG_CXX_CONFIG): Preserve variables used by AC_PROG_LD,
+	and reset them for a C++ environment.  Use the with_gnu_ld setting
+	from AC_PROG_LD.
+	
 	* libtool.m4: Replace $linker_flags with $compiler_flags wherever
 	it is used as argument to $CC.
 
