--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-02  Robert Boehne  <rboehne@gnu.org>
+
+	* tests/defs: Quote $DJGPP to prevent problems with some shells.
+	Pointed out by Albert Chin <libtool@thewrittenword.com>
+
 2003-04-01  Peter O'Gorman  <peter@pogma.com>
 
 	* libtool.m4: Fix the echo test which I broke earlier.
