--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-05  Allan Sandfeld Jensen  <snowwolf@one2one-networks.com>
+
+	* libtool.m4: Switch on $CC not $cc_basename.
+
 2003-04-02  Robert Boehne  <rboehne@gnu.org>
 
 	* tests/defs: Quote $DJGPP to prevent problems with some shells.
