--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-09  Samuel Meder  <meder@mcs.anl.gov>
+
+	* libtool.m4 Switch on `basename $CC` not $CC
+
 2003-04-05  Peter O'Gorman  <peter@pogma.com>
 
 	* libtool.m4: if ZSH_VERSION is set then setopt NO_GLOB_SUBST so
