--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-10  Alexandre Oliva  <aoliva@redhat.com>
+
+	* libtool.m4 (lt_cv_deplibs_check_method): Use pass_all on all
+	mips*-linux* variants.
+
 2003-04-09  Samuel Meder  <meder@mcs.anl.gov>
 
 	* libtool.m4 Switch on $CC and add paterns to cases.
