* NEWS: Updated. * configure.ac: Bumped version to 1.5a.
GNU libtool 1.5 was released.

* configure.ac: Bumped version to 1.5.
* NEWS: updated.
* README: Changed typo in version description.
* config.guess, config.sub, texinfo.tex:  Synchronized from
ftp.gnu.org.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2003-04-14  Robert Boehne  <rboehne@gnu.org>
+
+	* NEWS: Updated.
+	* configure.ac: Bumped version to 1.5a.
+
+	GNU libtool 1.5 was released.
+
+	* configure.ac: Bumped version to 1.5.
+	* NEWS: updated.
+	* README: Changed typo in version description.
+	* config.guess, config.sub, texinfo.tex:  Synchronized from
+	ftp.gnu.org.
+
 2003-04-05  Peter O'Gorman  <peter@pogma.com>
 
 	* libtool.m4: if ZSH_VERSION is set then setopt NO_GLOB_SUBST so
