--- a/README
+++ b/README
@@ -100,7 +100,7 @@ alphabetically:
 
 Since alpha releases are start with the code of a previous stable
 release, the <major-number> and <minor-number> are the same as the
-stable release they started with.  So release `1.3a' is the first
+stable release they started with.  So release `1.3b' is the first
 alpha release after stable release `1.3', and so on.
 
 To complicate matters slightly we always increment the letter in the
