--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-15  Robert Boehne  <rboehne@gnu.org>
+
+	* README-alpha: Updated upload instructions.
+
 2003-04-14  Robert Boehne  <rboehne@gnu.org>
 
 	* NEWS: Updated.
