--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-21  Bruno Haible  <bruno@clisp.org>
+
+	* libtool.m4 (AC_LIBTOOL_SYS_DYNAMIC_LINKER): Add support for
+	GNU/FreeBSD.
+
 2003-04-21  Richard Dawe  <rich@phekda.freeserve.co.uk>
 
 	* doc/libtool.texi: Use @ifnottex instead of @ifinfo,
