--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-30  Gary V. Vaughan  <gary@gnu.org>
+
+	* libltdl/ltdl.c (argz_insert): Corrected an off by one error when
+	checking that before is not out of range.
+
 2003-05-29  Gary V. Vaughan  <gary@gnu.org>
 
 	* libltdl/ltdl.c (lt_int_dyld_lib_install_name): Removed unused
