--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-06-03  Albert Chin-A-Young  <china@thewrittenword.com>
 
+	* libtool.m4: No need to use sed to remove leading comma when
+	appending to $tagnames.
+
+2003-06-03  Albert Chin-A-Young  <china@thewrittenword.com>
+
 	* tests/defs, tests/demo-conf.test, tests/demo-nofast.test,
 	tests/demo-nopic.test, tests/demo-pic.test,
 	tests/demo-shared.test, tests/demo-static.test,
