--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2003-06-03 Benjamin Reed  <ranger@befunk.com>
+2003-06-11  Gary V. Vaughan  <gary@gnu.org>
+
+	* NEWS: Sychronised from branch-1-5.
+
+2003-06-03  Benjamin Reed  <ranger@befunk.com>
 
 	* ltmain.in: search libraries in the order of preference, rather
 	than picking .la's even if they're in a less preferred directory.
