--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 1.5: 2002-04-14; CVS version 1.4e, Libtool team:
+New in 1.5.1: 2003-??-??; CVS version 1.5.0a, Libtool team:
+* Bug fixes.
+
+New in 1.5: 2003-04-14; CVS version 1.4e, Libtool team:
 * First stable release of multi-language architecture.
 * libtool and libltdl support for Mac OS/X.
 * libltdl will now use cygwins dlopen API instead of always forcing
@@ -8,6 +11,13 @@ New in 1.5: 2002-04-14; CVS version 1.4e, Libtool team:
 * Support auto-import patch to binutils on cygwin for much improved dll
   support.
 * Bug fixes.
+
+New in 1.4.3: 2002-10-13; CVS version 1.4.2a, Robert Boehne:
+* The libltdl subdirectory now bootstraps correctly with Automake 1.5.
+* srcdir != builddir builds with Automake 1.5 work correctly.
+* Support for mips-compaq-nonstopux.
+* New command line argument, --preserve-dup-deps prevents removal of
+  duplicate dependent libraries.
 
 New in 1.4d: 2002-01-07; CVS version 1.4c, Libtool team:
 * Help strings display correctly again.
@@ -25,6 +35,22 @@ New in 1.4d: 2002-01-07; CVS version 1.4c, Libtool team:
 * Bug fixes to the OpenBSD port.
 * Bug fixes.
 
+New in 1.4.2: 2001-09-11; CVS version 1.4.1a, Gary V. Vaughan:
+* libltdl now builds on solaris again
+* diagnose and warn about not-quite-working combinations of gcc and
+  ld on solaris.
+* Improved OpenBSD support.
+* Improved cygwin support.
+* Bugfixes.
+
+New in 1.4.1: 2001-09-03; CVS version 1.4.0a, Libtool team:
+* Better error messages from libltdl when loading fails.
+* Don't leave here-doc files behind.
+* Improved support for OpenBSD.
+* Libtool will build with autoconf-2.50 and higher.
+* Plug memory management bugs in libltdl.
+* Prefer shl_load to dlopen for better operation on HP-UX.
+
 New in 1.4b: 2001-07-09; CVS version 1.4a, Libtool team:
 * Now bootstraps with autoconf-2.50 and automake-1.4-p4.
 * Always try to build at least a static lib, even if both static and
@@ -37,9 +63,6 @@ New in 1.4b: 2001-07-09; CVS version 1.4a, Libtool team:
 * Internal mutex handling no longer has namespace clashes on NCR MP-RAS.
 * New pdemo and tagdemo tests.
 * Bug fixes.
-
-New in 1.4.1: 2001-??-??; CVS version 1.4.0a, Libtool team:
-* Don't leave here-doc files behind.
 
 New in 1.4: 2001-04-25; CVS version 1.3e, Libtool team:
 * Support for aix5*.
