--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-06-11  Gary V. Vaughan  <gary@gnu.org>
 
+	* configure.ac (AC_INIT): Bumped revision to 1.5.0a -- the first cvs
+	revision number for the 1.5 maintenance branch, leading towards a
+	1.5.1 release.
+
 	* NEWS: Sychronised from branch-1-4.
 
 2003-06-03 Benjamin Reed  <ranger@befunk.com>
