--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-06-25  Alexandre Oliva  <aoliva@redhat.com>, Tim Waugh  <twaugh@redhat.com>
+
+	* libtool.m4: Replace mis-uses of path with pathname.
+	(AC_PROG_LD_GNU): Don't quote $LD when running it.
+	(_LT_AC_LANG_CXX_CONFIG): Use -nostdlib also when linking with g++
+	and non-GNU ld.
+
 2003-06-11  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtool.m4 (AC_LIBTOOL_COMPILER_OPTION): Require LT_AC_PROG_SED to
